--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <center>
-    <h1>Kec boutique</h1>
+    <h1>Kec boutiquessss</h1>
     <h3>men section</h4>
     <img src="./images/men2.jpg" alt="no images found" srcset="" class="men">
     <p>stylish fit pants    rs.500</p>
